objects/FieloEE__TagItem__c.object
<CustomObject>
    <description>Set of tags applied to a content feed.</description>
    <fields>
        <fullName>FieloEE__Banner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner</label>
        <referenceTo>FieloEE__Banner__c</referenceTo>
        <relationshipLabel>Tags</relationshipLabel>
        <relationshipName>TagItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__News__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Feed</label>
        <referenceTo>FieloEE__News__c</referenceTo>
        <relationshipLabel>Tag Items</relationshipLabel>
        <relationshipName>TagItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>FieloEE__Tag__c</referenceTo>
        <relationshipLabel>Tag Items</relationshipLabel>
        <relationshipName>TagItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tag Item</label>
    <nameField>
        <displayFormat>TI-{0000}</displayFormat>
        <label>Tag Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>